--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-        source-url: https://nuget.pkg.github.com/sverigesradio/index.json
+        source-url: https://nuget.pkg.github.com/roog/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
@@ -25,8 +25,8 @@ jobs:
     - name: Upload NuGet Package
       uses: actions/upload-artifact@v1
       with:
-        name: SR.EmberPlusConsumerLib.NetStandard
-        path: ./src/Nuget.EmberPlusConsumerLib.NetStandard/bin/PackNuGet/SR.EmberPlusConsumerLib.NetStandard.${{ github.event.release.tag_name }}.nupkg
+        name: EmberPlus.ConsumerLib
+        path: ./src/Nuget.EmberPlusConsumerLib.NetStandard/bin/PackNuGet/EmberPlus.ConsumerLib.${{ github.event.release.tag_name }}.nupkg
 
     - name: Publish NuGet Package
-      run: dotnet nuget push ./src/Nuget.EmberPlusConsumerLib.NetStandard/bin/PackNuGet/SR.EmberPlusConsumerLib.NetStandard.${{ github.event.release.tag_name }}.nupkg --skip-duplicate --no-symbols true -k ${{secrets.GITHUB_TOKEN}} -s https://nuget.pkg.github.com/sverigesradio/index.json
+      run: dotnet nuget push ./src/Nuget.EmberPlusConsumerLib.NetStandard/bin/PackNuGet/EmberPlus.ConsumerLib.${{ github.event.release.tag_name }}.nupkg --skip-duplicate --no-symbols true -k ${{secrets.GITHUB_TOKEN}} -s https://nuget.pkg.github.com/roog/index.json
