--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -8,6 +8,9 @@ jobs:
   build:
     runs-on: windows-latest
 
+    permissions:
+      packages: write
+
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
