--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -8,8 +8,7 @@ jobs:
   build:
     runs-on: windows-latest
 
-    permissions:
-      packages: write
+    permissions: write-all
 
     steps:
     - name: Checkout Repository
