--- a/src/Nuget.EmberPlusConsumerLib.NetStandard/Nuget.EmberPlusConsumerLib.NetStandard.csproj
+++ b/src/Nuget.EmberPlusConsumerLib.NetStandard/Nuget.EmberPlusConsumerLib.NetStandard.csproj
@@ -26,7 +26,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-      <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
