--- a/src/Nuget.EmberPlusConsumerLib.NetStandard/Nuget.EmberPlusConsumerLib.NetStandard.csproj
+++ b/src/Nuget.EmberPlusConsumerLib.NetStandard/Nuget.EmberPlusConsumerLib.NetStandard.csproj
@@ -23,9 +23,17 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <NoWarn>CA2007;CA1307;CA1031;CS3021</NoWarn>
+
+    <PackageTags>emberplus;EmBER+;ember plus;ember;control;mixer;devices;consumer</PackageTags>
+
+    <PackageIcon>nuget-icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\docs\nuget-icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="..\..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
