--- a/src/Nuget.EmberPlusConsumerLib.NetStandard/Nuget.EmberPlusConsumerLib.NetStandard.csproj
+++ b/src/Nuget.EmberPlusConsumerLib.NetStandard/Nuget.EmberPlusConsumerLib.NetStandard.csproj
@@ -27,6 +27,10 @@
     <PackageTags>emberplus;EmBER+;ember plus;ember;control;mixer;devices;consumer</PackageTags>
 
     <PackageIcon>nuget-icon.png</PackageIcon>
+
+    <PackageLicenseExpression>BSL-1.0</PackageLicenseExpression>
+
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
